# algo

./: .gitignore  CMakeLists.txt  README.md
0.String/: CMakeLists.txt  String.h  main.cpp
1.Tickets/: Tickets.h
2.GCD/: CMakeLists.txt  GCD.h  benchmark.txt  main.cpp
3.Power/: CMakeLists.txt  Power.cpp  Power.h  benchmark.txt  main.cpp
3.Power/tests/: test.0.out  test.2.out  test.5.out  test.7.out  test.8.out  test.9.out
4.Fibo/: CMakeLists.txt  benchmark.txt  main.cpp
5.Primes/: benchmark.txt
6.Bits/: Bits.cpp  Bits.h  main.cpp
6.Bits/tests/strickers/my_tests/: test.0.in  test.1.in  test.1.out  test.3.in  test.3.out
7.BasicStructures/: BasicStructures.cpp  BasicStructures.h  CMakeLists.txt  ReadMe.md  benchmark.txt  main.cpp
8.Sorts/: Sorts.h  benchmark.txt  main.cpp
HarryPotterSquare/: CMakeLists.txt  main.cpp
Tester/: ITask.h  Tester.cpp  Tester.h
hw/: CMakeLists.txt
hw/hw01/: CMakeLists.txt
hw/hw01/0.String/: README.md  String.cpp
hw/hw01/1.Tickets/: CMakeLists.txt
hw/hw01/HarryPotterSquare/: main.cpp
hw/hw02/: CMakeLists.txt
hw/hw02/2.GCD/: GCD.cpp  benchmark.txt  main.cpp
hw/hw02/3.Power/: Power.cpp  benchmark.txt  main.cpp
hw/hw02/3.Power/tests/: test.6.out
hw/hw02/4.Fibo/: Fibo.cpp  Fibo.h  benchmark.txt  main.cpp
hw/hw02/5.Primes/: CMakeLists.txt  Primes.cpp
hw/hw03/: CMakeLists.txt
hw/hw03/6.Bits/: CMakeLists.txt  ReadMe.md
hw/hw03/6.Bits/tests/strickers/my_tests/: test.4.in  test.4.out
hw/hw04/: CMakeLists.txt
hw/hw04/7.BasicStructures/: BasicStructures.h  main.cpp
hw/hw05/: CMakeLists.txt
hw/hw05/8.Sorts/: CMakeLists.txt  benchmark.txt
hw/hw06/: CMakeLists.txt
hw/hw06/9.MergeSort/: CMakeLists.txt  MergeSort.cpp  MergeSort.h  ReadMe.md  benchmark.txt  main.cpp
hw/hw07/: CMakeLists.txt
hw/hw07/10.BST/: AVL.cpp  AVL.h  BST.cpp  BST.h  CMakeLists.txt  Node.h  ReadMe.md  avl_benchmark.txt  bst_benchmark.txt  main.cpp
hw/hw07/10.BST/test/: CMakeLists.txt  test_SimpleBST.cpp
hw/hw08/: CMakeLists.txt
hw/hw08/11.SegmentTree/: CMakeLists.txt  ReadMe.md
hw/hw09/: CMakeLists.txt
hw/hw09/12.HashTable/: CMakeLists.txt  HashTable.h  ReadMe.md  main.cpp
hw/hw09/12.HashTable/test/: CMakeLists.txt  test_HashTable.cpp
hw/hw10/: CMakeLists.txt
hw/hw10/13.GraphTopologicalSort/: CMakeLists.txt  GraphSearch.cpp  GraphSearch.h  ReadMe.md  TopologicalSort.cpp  TopologicalSort.h  main.cpp
hw/hw10/13.GraphTopologicalSort/test/: CMakeLists.txt  test_TopologicalSort.cpp
hw/hw11/: CMakeLists.txt
hw/hw11/14.GraphSpanningTree/: CMakeLists.txt  MinimalSpanningTree.cpp  MinimalSpanningTree.h  ReadMe.md  main.cpp
hw/hw12/: CMakeLists.txt
hw/hw12/15.ShortestPath/: CMakeLists.txt  ReadMe.md  ShortestPath.cpp  ShortestPath.h  main.cpp
hw/hw13/: CMakeLists.txt
hw/hw13/16.RLE/: CMakeLists.txt  RLE.cpp  RLE.h  ReadMe.md  benchmark.txt  main.cpp
hw/hw13/16.RLE/test/: test.rle  test.txt
hw/hw14/: CMakeLists.txt
hw/hw14/17.Olimp1/: ReadMe.md
hw/hw14/17.Olimp1/58/: 58.py
hw/hw14/17.Olimp1/Islands/: islands.cpp
hw/hw14/17.Olimp1/One_two_bean/: OneTwoBean.m
hw/hw14/17.Olimp1/Pine_tree/: pine_tree.cpp
hw/hw14/17.Olimp1/Shed/: shed1.cpp  shed2.cpp  shed3.cpp  shed4.cpp
hw01/0.String/: String.cpp
hw01/1.Tickets/: Tickets.cpp  main.cpp
hw02/2.GCD/: GCD.cpp
hw02/3.Power/: benchmark.txt  main.cpp
hw02/3.Power/tests/: test.3.out  test.4.out
hw02/4.Fibo/: Fibo.cpp  benchmark.txt
hw02/5.Primes/: Primes.cpp  Primes.h  main.cpp
hw03/6.Bits/: Bits.cpp
hw03/6.Bits/tests/strickers/my_tests/: test.0.out  test.2.in  test.2.out
hw04/7.BasicStructures/: SparceMatrix.cpp  SparceMatrix.h
hw05/8.Sorts/: ReadMe.md  Sorts.cpp  benchmark.txt
